# ourRAG

./: .env.docker.example  .env.example  .env.local.example  .env.production.example  .env.test.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  ourrag-codex-prompts.md
backend/: .dockerignore  Dockerfile  QUERY_REWRITING_IMPLEMENTATION.md  README.md  alembic.ini  pyproject.toml  verify_syntax.py
backend/app/: __init__.py  main.py
backend/app/domain/: errors.py
backend/app/workers/: __init__.py  ingestion.py
backend/eval/: metrics.py  report.py  runner.py  schema.py
backend/eval/fixtures/: benchmark.jsonl
backend/migrations/: env.py
backend/migrations/versions/: 20260416_0001_initial_domain_tables.py  20260416_0002_add_audits_table.py  20260417_0003_add_document_processing_jobs.py  20260428_0004_add_document_chunks_fts.py  20260428_0005_add_feedback_table.py  20260428_0010_add_document_classification_columns.py
backend/tests/: conftest.py  factories.py  test_health.py
backend/tests/e2e/: test_mvp_happy_path.py
backend/tests/integration/: test_admin_actions_audit_api.py  test_admin_api.py  test_advanced_memory.py  test_conversation_api.py  test_document_classification.py  test_document_processing_jobs_api.py  test_document_upload_api.py  test_document_version_lifecycle_api.py  test_domain_constraints.py  test_embedding_qdrant_indexing.py  test_extraction_api.py  test_feedback_api.py  test_local_file_storage.py  test_multi_query_retrieval.py  test_routing_orchestration.py  test_summarization_api.py
(+414 files in other folders)
